--- a/app/src/main/res/layout/item_pic.xml
+++ b/app/src/main/res/layout/item_pic.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.yuxiao.buz.baseframework.MainActivity">
+    tools:context="com.yuxiao.buz.test.MainActivity">
     <ImageView
         android:id="@+id/iv"
         android:layout_width="match_parent"
